# CICD-API

./: README.md
cicd-mini-fastapi/: .gitignore  README.md  pyproject.toml
cicd-mini-fastapi/.github/workflows/: cd.yml  ci.yml
cicd-mini-fastapi/app/: main.py
